updated to new dotnet image because the older image is no longer available

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - demo
 
   status-api:
-    build: ../status-api2
+    build: ../status-api
     depends_on:
       - queue
       - java-consumer
