--- a/status-api/Properties/launchSettings.json
+++ b/status-api/Properties/launchSettings.json
@@ -1,22 +1,31 @@
-{
+﻿{
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:50082/",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:26419",
+      "sslPort": 44312
     }
   },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
+    "status_api2": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7205;http://localhost:5061",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "status-api": {
-      "commandName": "Project"
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
