--- a/status-api/appsettings.json
+++ b/status-api/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "RabbitSettings": {
     "Username": "guest",
     "Password": "guest",
@@ -11,5 +11,6 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
